--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "joi": "^13.1.0",
-    "pg": "^8.10.0"
+    "joi": "^13.1.0"
   }
 }
